--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
 		    <artifactId>jedis</artifactId>
 		    <version>3.3.0</version>
 		</dependency>
+
+        <dependency>
+            <groupId>com.jcraft</groupId>
+            <artifactId>jsch</artifactId>
+            <version>0.1.55</version>
+        </dependency>
     </dependencies>
 
     <repositories>
